2006-01-24  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixMarshal.cs (StringToHeap): Return IntPtr.Zero if `s' is null.

2006-01-24  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixMarshal.cs (StringToHeap): Check for null arguments.

2006-01-20  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixDriveInfo.cs: Properties should generate an InvalidOperationException,
	  not an IOException.  Users can use IsReady to avoid exception generation.
	* UnixIOException.cs: Create a custom message that embeds the error name 
	  within the text, e.g. "Permission denied [EACCES]."
	* UnixSymbolicLinkInfo.cs: This really should create the file FullPath, not
	  OriginalPath.  Created files shouldn't ever be relative to the current
	  working directory, as this can change at any time.

2006-01-15  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixUserInfo.cs: The UnixUserInfo(Native.Passwd) constructor and 
	  ToPasswd() should clone the underlying Native.Passwd, so
	  that it doesn't get changed from underneath it.
	* UnixGroupInfo.cs: The UnixGroupInfo(Native.Group) constructor should also
	  clone the provided Native.Group instance.

2006-01-14  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixGroupInfo.cs: ToGroup() should clone the underlying Native.Group, so
	  that it doesn't get changed from underneath it.

2006-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* Catalog.cs, UnixMarshal.cs: Throw `UnixIOException(Native.Errno.ENOMEM)`
	  instead of System.OutOfMemoryException.  OOME should be reserved for use 
	  by the CLR (according to FxDG).

2006-01-12  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixPath.cs: Add ReadLink() and TryReadLink() methods.

2006-01-12  Miguel de Icaza  <miguel@novell.com>

	* PeerCred.cs: Do not define PeerCredData as this is a structure
	known to the runtime.  Instead use the Mono.Posix.PeerCredData
	internal class. 

2006-01-10  Jonathan Pryor <jonpryor@vt.edu>

	* Catalog.cs: Don't use
	  System.Runtime.InteropServices.Marshal.StringToHGlobalAuto(), use