@@ -1,3 +1,8 @@
+2006-01-26  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* UnixMarshal.cs: Check for null arguments in PtrToString() and
+	  PtrToStringArray().
+
 2006-01-24  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* UnixMarshal.cs (StringToHeap): Return IntPtr.Zero if `s' is null.
